# FlaskPlusPlus

./: .gitignore  DOCS.md  README.md  pyproject.toml  run.py  setup.bat
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
app/data/: __init__.py  babel.py
app/static/css/themes/: triade_green.css
app/static/js/: base.js  socket.js
app/templates/: base_example.html  base_modal.html  flashing.html
app/templates/modals/: confirm_modal.html  info_modal.html
app/utils/: __init__.py  processing.py  translating.py
examples/example_module/: __init__.py  forms.py  manifest.json  routes.py
examples/example_module/data/: __init__.py  your_dataset.py
examples/example_module/handling/: your_endpoint.py
examples/example_module/templates/: index.html  vite_index.html  your_form.html
examples/fpp_project/: setup.bat  setup.sh
modules/: __init__.py
modules/example/: __init__.py  routes.py
modules/example/data/: your_dataset.py
modules/example/handling/: your_endpoint.py
modules/example/templates/: index.html
src/flaskpp/: __init__.py  cli.py
src/flaskpp/app/: extensions.py  i18n.py
src/flaskpp/app/config/: __init__.py  default.py
src/flaskpp/fpp_node/: cli.py
src/flaskpp/modules/: __init__.py  cli.py  creator_templates.py
src/flaskpp/tailwind/: __init__.py  cli.py
src/flaskpp/tests/: cli.py
src/flaskpp/utils/: __init__.py  run.py  service_registry.py  setup.py
src/flaskpp/vite/: __init__.py  package.json
tests/: test_app.py
tests/test_cli/: __init__.py  modules.py  registry.py
(+11 files in other folders)
